# AIDBQC_flow

./: .env.example  .gitignore  AGENTS.md  AI-DB-QC_理论框架报告_v2.md  AUDIT_REPORT_V3.3.md  AUDIT_REPORT_V3.4.md  PROJECT_STATUS_REPORT_V3.2.md  README.md  ROADMAP.md  config.yaml.example  docker-compose.milvus.yml  docker-compose.pgvector.yml  docker-compose.qdrant.yml  docker-compose.weaviate.yml  group_meeting_report.html  harness_engineering_blueprint.json  main.py  pyproject.toml  pytest.ini  reliability_upgrade_blueprint.json  reproduce_milvus_bug.py  reproduce_qdrant_bug.py  requirements-dashboard.txt  requirements.txt  rollback_documentation_enhancement.sh  开题报告.txt
.trae/: config.yaml
configs/: cross_db_test.yaml  database_connections.yaml
docker/: Dockerfile.sandbox
docs/: CRITICAL_ERROR_IMPLEMENTATION.md  OPTIMIZATION_GUIDE.md  PROJECT_PANORAMA.md  TECHNICAL_REPORT.md  VULNERABILITY_AUDIT.md  alerting_guide.md  collection_pool.md  configuration.md  context_reset_strategy.md  dashboard_guide.md  error_codes.md  exception_handling.md
issues/: README.md
scripts/: _analyze_defects.py  _regenerate_issues.py  check_defects.py  cleanup_env.py  debug_test.py  demonstrate_critical_error_handling.py  finish_remaining_issues.py  manual_issue_generator.py  monitor_progress.py  quick_test.py  realtime_monitor.py  regenerate_failed_issues.py  test_qdrant_adapter.py  test_weaviate_adapter.py
src/: ann_whitelist.py  config.py  contract_fallbacks.py  coverage_monitor.py  critical_error_handler.py  docker_port_manager.py  docker_probe.py  graph.py  knowledge_base.py  (+8 more)
(+460 files in other folders)
