[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidbqc-v6"
version = "6.0.0"
description = "AI-Driven Database Quality Control - Deep Gray-box Testing Framework"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=1.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "pymilvus>=2.3.0",
    "qdrant-client>=1.8.0",
    "weaviate-client>=4.0.0",
    "pgvector>=0.3.0",
    "asyncpg>=0.29.0",
    "docker>=7.0.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "crawl4ai>=0.3.0",
    "chromadb>=0.4.0",
    "duckduckgo-search>=4.0.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
